--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"scripts": {
 		"dev": "node server.js",
+		"dev:prod": "node server.js dist",
 		"dist": "cross-env NODE_ENV=production webpack --config ./webpack.config.js"
 	},
 	"dependencies": {
@@ -9,12 +10,15 @@
 		"mobx": "^3.6.1",
 		"mobx-react": "^4.4.2",
 		"nprogress": "^0.2.0",
+		"particles.js": "^2.0.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
 		"react-motion": "^0.5.2",
 		"react-router-dom": "^4.2.2",
+		"react-tippy": "^1.2.2",
 		"react-toastify": "^3.4.1",
+		"rebass": "^2.0.0-0",
 		"styled-components": "^3.2.1"
 	},
 	"devDependencies": {
