--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "particles.js": "^2.0.0",
         "prop-types": "^15.6.1",
         "react": "^16.2.0",
+        "react-content-loader": "^3.1.1",
         "react-dom": "^16.2.0",
+        "react-loadable": "^5.3.1",
         "react-motion": "^0.5.2",
         "react-router-dom": "^4.2.2",
         "react-tippy": "^1.2.2",
