--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "invariant": "^2.2.3",
         "mobx": "^3.6.1",
         "mobx-react": "^4.4.2",
+        "moment": "^2.21.0",
         "nprogress": "^0.2.0",
         "particles.js": "^2.0.0",
         "prop-types": "^15.6.1",
