--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "file-loader": "^1.1.11",
         "invariant": "^2.2.3",
         "mobx": "^3.6.1",
         "mobx-react": "^4.4.2",
