--- a/package.json
+++ b/package.json
@@ -1,56 +1,59 @@
 {
-    "scripts": {
-        "start": "node server.js",
-        "start:prod": "node server.js dist",
-        "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js",
-        "precommit": "lint-staged"
-    },
-    "lint-staged": {
-        "*.{js,json,css,md}": ["prettier --write", "git add"]
-    },
-    "dependencies": {
-        "ali-oss": "^5.0.0",
-        "axios": "^0.18.0",
-        "file-loader": "^1.1.11",
-        "invariant": "^2.2.3",
-        "mobx": "^3.6.1",
-        "mobx-react": "^4.4.2",
-        "moment": "^2.21.0",
-        "nprogress": "^0.2.0",
-        "particles.js": "^2.0.0",
-        "prop-types": "^15.6.1",
-        "react": "^16.2.0",
-        "react-content-loader": "^3.1.1",
-        "react-dom": "^16.2.0",
-        "react-loadable": "^5.3.1",
-        "react-motion": "^0.5.2",
-        "react-router-dom": "^4.2.2",
-        "react-tippy": "^1.2.2",
-        "react-toastify": "^3.4.1",
-        "rebass": "^2.0.0-0",
-        "styled-components": "^3.2.1"
-    },
-    "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.3",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-1": "^6.24.1",
-        "clean-webpack-plugin": "^0.1.18",
-        "cross-env": "^5.1.3",
-        "css-loader": "^0.28.10",
-        "express": "^4.16.2",
-        "html-webpack-plugin": "^3.0.4",
-        "http-proxy-middleware": "^0.17.4",
-        "husky": "^0.14.3",
-        "lint-staged": "^7.0.0",
-        "prettier": "^1.11.1",
-        "style-loader": "^0.20.2",
-        "thread-loader": "^1.1.5",
-        "uglifyjs-webpack-plugin": "^1.2.2",
-        "url-loader": "^0.6.2",
-        "webpack": "3.11.0"
-    }
+  "scripts": {
+    "start": "node server.js",
+    "start:prod": "node server.js dist",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": ["prettier --write", "git add"]
+  },
+  "dependencies": {
+    "ali-oss": "^5.0.0",
+    "axios": "^0.18.0",
+    "file-loader": "^1.1.11",
+    "invariant": "^2.2.3",
+    "mobx": "^4.3.1",
+    "mobx-react": "^5.2.0",
+    "moment": "^2.21.0",
+    "nprogress": "^0.2.0",
+    "particles.js": "^2.0.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.4.0",
+    "react-content-loader": "^3.1.1",
+    "react-dom": "^16.4.0",
+    "react-loadable": "^5.3.1",
+    "react-motion": "^0.5.2",
+    "react-router-dom": "^4.2.2",
+    "react-tippy": "^1.2.2",
+    "react-toastify": "^3.4.1",
+    "rebass": "^2.0.0-0",
+    "styled-components": "^3.2.1",
+    "styled-icons": "^2.2.0",
+    "styled-tools": "^0.5.0",
+    "zq-react-ui-pack": "^0.0.6"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.18",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.10",
+    "express": "^4.16.2",
+    "html-webpack-plugin": "^3.0.4",
+    "http-proxy-middleware": "^0.17.4",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.0",
+    "prettier": "^1.11.1",
+    "style-loader": "^0.20.2",
+    "thread-loader": "^1.1.5",
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "url-loader": "^0.6.2",
+    "webpack": "3.11.0"
+  }
 }
