--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "scripts": {
-    "start": "node server.js",
-    "start:prod": "node server.js dist",
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js",
+    "start1": "node ./node_modules/zq-react-build/scripts/start.js",
+    "start": "zq-react-build start",
+    "build": "zq-react-build build",
+    "_start:prod": "node server.js dist",
+    "_build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js",
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,json,css,md}": ["prettier --write", "git add"]
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "ali-oss": "^5.0.0",
@@ -31,9 +36,10 @@
     "styled-components": "^3.2.1",
     "styled-icons": "^2.2.0",
     "styled-tools": "^0.5.0",
+    "zq-react-build": "^0.1.2",
     "zq-react-ui-pack": "^0.0.6"
   },
-  "devDependencies": {
+  "_devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
